kubernetes/social/irc/edefnet/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pounce-edefnet
spec:
  selector:
    matchLabels:
      app: pounce-edefnet
  replicas: 1
  template:
    metadata:
      labels:
        app: pounce-edefnet
    spec:
      containers:
        - name: pounce
          image: ghcr.io/duckfullstop/cri-pounce:latest
          command: ['pounce', '-v', '/config/pounce.conf']
          resources:
            requests:
              memory: "20Mi"
              cpu: "25m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          volumeMounts:
          - name: config
            mountPath: /config
          - name: certs
            mountPath: /config/certs
            readOnly: true
          - name: client-auth-certs
            mountPath: /config/certs/ca
            readOnly: true
          - name: cli-cert
            mountPath: /config/certs-cli
            readOnly: true
          ports:
          - containerPort: 6697
            protocol: TCP
            name: irc-ssl
          livenessProbe:
            tcpSocket:
              port: irc-ssl
            initialDelaySeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            tcpSocket:
              port: irc-ssl
            initialDelaySeconds: 5
            timeoutSeconds: 5
        - name: palaver
          image: ghcr.io/duckfullstop/cri-pounce:latest
          command: 
            - 'pounce-palaver'
            - '-t' # Force trust (looks a bit weird, but we're basically trusting the LE root certificate implicitly)
            - '/etc/ssl/certs/ca-certificates.crt'
            - '-c' # Auth with this certificate
            - '/config/certs/cli/tls.crt'
            - '-k' # Auth with this private key
            - '/config/certs/cli/tls.key'
            - '-d' # Database file
            - '/tmp/palaver.db'
            - '127.0.0.1'
          resources: 
            requests:
              memory: "20Mi"
              cpu: "25m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          volumeMounts:
          - name: client-auth-certs
            mountPath: /config/certs/cli
            readOnly: true
      volumes:
        - name: config
          emptyDir:
            sizeLimit: 5Mi
        - name: config-configmap
          configMap:
            name: pounce-edefnet
        - name: config-secret
          secret:
            secretName: pounce-edefnet
        - name: client-auth-certs
          secret:
            secretName: irc-client-ca
        - name: certs
          secret:
            secretName: irc-edefnet-cert
        - name: cli-cert
          secret:
            secretName: irc-edefnet-cli-cert
